--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/protraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="./staffs/01.jpg" class="rounded-circle mb-3" alt="">
                             <h3 class="card-title mb-3">Olatunde</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quisquam harum aliquid, quos molestiae illum facilis error vel architecto iusto saepe quibusdam deleniti ratione voluptatum beatae minima quia commodi officiis!</p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i>
@@ -263,7 +263,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/protraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="./staffs/02.jpg" class="rounded-circle mb-3" alt="">
                             <h3 class="card-title mb-3">Sam</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quisquam harum aliquid, quos molestiae illum facilis error vel architecto iusto saepe quibusdam deleniti ratione voluptatum beatae minima quia commodi officiis!</p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i>
@@ -281,7 +281,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/protraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="./staffs/03.jpg" class="rounded-circle mb-3" alt="">
                             <h3 class="card-title mb-3">Daniel</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quisquam harum aliquid, quos molestiae illum facilis error vel architecto iusto saepe quibusdam deleniti ratione voluptatum beatae minima quia commodi officiis!</p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i>
@@ -299,7 +299,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="https://randomuser.me/api/protraits/men/11.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="./staffs/04.jpg" class="rounded-circle mb-3" alt="">
                             <h3 class="card-title mb-3">Adewale</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quisquam harum aliquid, quos molestiae illum facilis error vel architecto iusto saepe quibusdam deleniti ratione voluptatum beatae minima quia commodi officiis!</p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i>
