--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="./staffs/01.jpg" class="rounded-circle mb-3" alt="">
-                            <h3 class="card-title mb-3">Olatunde</h3>
+                            <img src="./staffs/team-1.jpg" class="rounded-circle mb-3" alt="">
+                            <h3 class="card-title mb-3">Ben</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quisquam harum aliquid, quos molestiae illum facilis error vel architecto iusto saepe quibusdam deleniti ratione voluptatum beatae minima quia commodi officiis!</p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i>
                             </a>
@@ -263,11 +263,11 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="./staffs/02.jpg" class="rounded-circle mb-3" alt="">
-                            <h3 class="card-title mb-3">Sam</h3>
+                            <img src="./staffs/team-2.jpg" class="rounded-circle mb-3" alt="">
+                            <h3 class="card-title mb-3">Jane</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quisquam harum aliquid, quos molestiae illum facilis error vel architecto iusto saepe quibusdam deleniti ratione voluptatum beatae minima quia commodi officiis!</p>
-                            <a href="#"><i class="bi bi-twitter text-dark mx-1"></i>
-                            </a>
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            
                             <a href="#"><i class="bi bi-facebook text-dark mx-1"></i>
                             </a>
                             <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i>
@@ -281,7 +281,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="./staffs/03.jpg" class="rounded-circle mb-3" alt="">
+                            <img src="./staffs/team-3.jpg" class="rounded-circle mb-3" alt="">
                             <h3 class="card-title mb-3">Daniel</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quisquam harum aliquid, quos molestiae illum facilis error vel architecto iusto saepe quibusdam deleniti ratione voluptatum beatae minima quia commodi officiis!</p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i>
@@ -299,8 +299,8 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
                         <div class="card-body text-center">
-                            <img src="./staffs/04.jpg" class="rounded-circle mb-3" alt="">
-                            <h3 class="card-title mb-3">Adewale</h3>
+                            <img src="./staffs/team-4.jpg" class="rounded-circle mb-3" alt="">
+                            <h3 class="card-title mb-3">Lucy</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quisquam harum aliquid, quos molestiae illum facilis error vel architecto iusto saepe quibusdam deleniti ratione voluptatum beatae minima quia commodi officiis!</p>
                             <a href="#"><i class="bi bi-twitter text-dark mx-1"></i>
                             </a>
